Fixed too large margin problem
(Added -0.5rem in typography to fix it)

--- a/src/stylesheets/base/_typography.scss
+++ b/src/stylesheets/base/_typography.scss
@@ -21,7 +21,7 @@ a {
 
 h1, h2, h3, h4, h5, h6 {
 	margin-top: 0;
-	margin-bottom: 2rem;
+	margin-bottom: -0.5rem;
 	font-weight: bold;
 	font-family: 'Liberation-Sans', sans-serif;
 }
